# ravesli

./: .Test.sh.kate-swp  .gitignore  CMakeLists.txt  README.md  Temp.bat  Test.sh
Chapter5/: Chapter5.md
Chapter5/Task1/: Task1.cpp
Chapter5/Task2/: Task2.cpp
Chapters/Chapter6/: Chapter6.md  README-6.md  README.md
Chapters/Chapter7/: README.md
Lesson75/Task1/: Task1.cpp
Lesson75/Task2/: Task2.cpp
Lesson76/: Lesson76.md
Lesson76/Task1/: Task1.cpp
Lesson76/Task2/: Task2.cpp
Lessons/Lesson104/: README.md
Lessons/Lesson107/: README.md
Lessons/Lesson75/: Lesson75.md
Lessons/Lesson77/: Lesson77.md
Lessons/Lesson86/: Lesson86.md
chapters/: CMakeLists.txt
chapters/chapter8/: CMakeLists.txt  RADME.md  README.md
chapters/chapter8/task1/: CMakeLists.txt
chapters/chapter8/task1/include/: Point.h
chapters/chapter8/task1/sources/: Main.cpp  Point.cpp
chapters/chapter8/task2/: CMakeLists.txt
chapters/chapter8/task2/include/: Welcome.h
chapters/chapter8/task2/sources/: Main.cpp  Welcome.cpp
chapters/chapter8/task3/: CMakeLists.txt  README.md
chapters/chapter8/task3/include/: Monster.h
chapters/chapter8/task3/sources/: Main.cpp  Monster.cpp
chapters/chapter8/task4/: CMakeLists.txt
chapters/chapter8/task4/include/: Card.h  Deck.h  Player.h
chapters/chapter8/task4/sources/: Card.cpp  Deck.cpp  Main.cpp  Player.cpp
lessons/: CMakeLists.txt
lessons/lesson113/: CMakeLists.txt  README.md
lessons/lesson114/: CMakeLists.txt  README.md
lessons/lesson116/: CMakeLists.txt  README.md
old/Temp/: Temp.cpp  (+1 more)
temp/: CMakeLists.txt  Temp.cpp
(+91 files in other folders)
